WebCore/page/InspectorController.cpp
@@ -1279,27 +1279,21 @@ void InspectorController::toggleRecordButton(bool isProfiling)
     callFunction(m_scriptContext, m_scriptObject, "setRecordingProfile", 1, &isProvingValue, exception);
 }
 
-void InspectorController::startGroup()
+void InspectorController::startGroup(MessageSource source, ExecState* exec, const ArgList& arguments, unsigned lineNumber, const String& sourceURL)
 {    
-    JSValueRef exception = 0;
-
     ++m_groupLevel;
 
-    if (windowVisible())
-        callFunction(m_scriptContext, m_scriptObject, "startGroupInConsole", 0, NULL, exception);
+    addConsoleMessage(new ConsoleMessage(source, StartGroupMessageLevel, exec, arguments, lineNumber, sourceURL, m_groupLevel));
 }
 
-void InspectorController::endGroup()
+void InspectorController::endGroup(MessageSource source, unsigned lineNumber, const String& sourceURL)
 {
-    JSValueRef exception = 0;
-
     if (m_groupLevel == 0)
         return;
 
     --m_groupLevel;
 
-    if (windowVisible())
-        callFunction(m_scriptContext, m_scriptObject, "endGroupInConsole", 0, NULL, exception);
+    addConsoleMessage(new ConsoleMessage(source, EndGroupMessageLevel, String(), lineNumber, sourceURL, m_groupLevel));
 }
 
 void InspectorController::addProfile(PassRefPtr<Profile> prpProfile)
